# vispaths

./: LICENSE  README.md  pyproject.toml
notebooks/manuscript/fig3/: 3.D_V1_sigmoid_fit_comparison.ipynb  3.E_V1_reaction_time_change.ipynb  3.F_V1_wheel_profile.ipynb  3.G_HVA_sigmoid_fit_comparison.ipynb  3.H_HVA_reaction_time_change.ipynb  3.J_HVA_wheel_profile.ipynb
notebooks/manuscript/fig4/: 4.A_individual_area_sigmoid_fit_comparison.ipynb  4.B_individual_areas_delta_hit_rate.ipynb  4.C_individual_areas_delta_reaction__time.ipynb  4.E_individual_areas_hit_rate_reaction_time_correlate.ipynb
notebooks/manuscript/fig5/: 5.A-C_sigmoid_fit_comparison.ipynb  5.B-D_individual_areas_hit_rate_reaction_time_correlate.ipynb
notebooks/manuscript/fig6/: 6.C_CNO_through_sessions.ipynb  6.D-F_all_manip_sigmoid_fit_comparison.ipynb
